2005-10-26  Andre Magalhaes  <andrunko@gmail.com>

	reviewed by: Zeeshan Ali   <zeenix@gmail.com>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_class_init):
	Fixes a small but nasty bug. The derived elements no longer segfaults
	on finalization.

2005-10-26  Michael Smith <msmith@fluendo.com>

	* gst/audioconvert/audioconvert.c: (audio_convert_clean_context):
	  When clearing an audioconvert context, set tmpbufsize to zero, so
	  we'll allocate it again later if required.
	  This fixes audioconvert re-negotiating formats, which previously
	  segfaulted with a NULL destination buffer.

2005-10-26  Zeeshan Ali <zeenix@gmail.com>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_base_init), (gst_base_rtp_depayload_push),
	(gst_base_rtp_depayload_set_gst_timestamp),
	(gst_base_rtp_depayload_queue_release):
	Fixed a smalll memleak.

2005-10-26  Zeeshan Ali  <zeenix@gmail.com>
	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_base_init), (gst_base_rtp_depayload_init),
	(gst_base_rtp_depayload_finalize),
	(gst_base_rtp_depayload_setcaps),
	(gst_base_rtp_depayload_add_to_queue),
	(gst_base_rtp_depayload_push),
	(gst_base_rtp_depayload_set_gst_timestamp),
	(gst_base_rtp_depayload_queue_release),
	(gst_base_rtp_depayload_thread),
	(gst_base_rtp_depayload_change_state):
	* gst-libs/gst/rtp/gstbasertpdepayload.h:
	Changed the C++ comments to C comments

2005-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/tcp/gsttcpclientsrc.c: (gst_tcpclientsrc_init):
	* gst/tcp/gsttcpclientsrc.h:
	* gst/tcp/gsttcpserversrc.c: (gst_tcpserversrc_init):
	* gst/tcp/gsttcpserversrc.h:
	  Remove unused 'curoffset' structure member.

2005-10-25  Zeeshan Ali  <zeenix@gmail.com>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_base_init),
	(gst_base_rtp_depayload_finalize):
	* gst-libs/gst/rtp/gstbasertpdepayload.h:
	* gst-libs/gst/rtp/gstbasertppayload.h: